--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,3 +21,10 @@ html {
   height: 100%;
   min-width: 900px;
 }
+
+body {
+  margin: 0 auto;
+  font-family: arial, sans-serif;
+  position: relative;
+  min-height: 100%;
+}
