--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,3 +28,11 @@ body {
   position: relative;
   min-height: 100%;
 }
+
+nav {
+  position: relative;
+  width: 30%;
+  height: 5%;
+  padding: 1em;
+  float: right;
+}
