--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,3 +36,10 @@ nav {
   padding: 1em;
   float: right;
 }
+
+.navlist li a {
+  text-decoration: none;
+  color: #2B2B2B;
+  padding: 0.5em;
+  font-size: 0.8em;
+}
