--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,3 +78,31 @@ section {
   position: relative;
   bottom: -40px;
 }
+
+.logo-container, .logo {
+  width: 300px;
+}
+
+.logo-container {
+  margin: auto;
+}
+
+.search, .buttons {
+  margin-top: 15px;
+  position: relative;
+}
+
+.box {
+  height: 25px;
+  width: 500px;
+  border: 1px solid #CCC;
+}
+
+.voice {
+  height: 21px;
+  width: 15px;
+  position: relative;
+  top: 6px;
+  right: 30px;
+  opacity: .70;
+}
