--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,3 +106,50 @@ section {
   right: 30px;
   opacity: .70;
 }
+
+.buttons input {
+  background-color: #F3F3F3;
+  border: 1px solid #C6C6C6;
+  opacity: .80;
+  border-radius: 2plx;
+  margin: 0 8px;
+  padding: 7px 13px;
+  font-weight: bold;
+  font-size: 0.7em;
+}
+
+.buttons input:hover {
+  -webkit-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.15);
+	box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.15);
+}
+
+.buttons input:focus {
+  border: 1px solid #4D90FE;
+}
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background-color: #F2F2F2;
+  border-top: 1px solid #C6C6C6;
+  opacity: 0.7;
+  height: 5%;
+}
+
+footer .navlist {
+  position: relative;
+  top: 5px;
+}
+
+footer .navlist ul li a {
+  margin: 5px 20px;
+  padding: 10px;
+  height: 40px;
+}
+
+span {
+  color: #B14436;
+  opacity: 1;
+}
