--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,13 +6,13 @@
   float: right;
 }
 
-.clearfix:before,
-.clearfix:after {
+.clearfix::before,
+.clearfix::after {
   content: " ";
   display: table;
 }
 
-.clearfix:after {
+.clearfix::after {
   clear: both;
 }
 
